[gd_scene load_steps=16 format=3 uid="uid://cdaw46b4qgdi1"]

[ext_resource type="Script" path="res://Assets/Scripts/Main/frontCounter.gd" id="1_nasjd"]
[ext_resource type="Texture2D" uid="uid://00urhlnaat23" path="res://Assets/Images/temp_white.png" id="2_iohlj"]
[ext_resource type="Texture2D" uid="uid://cfyfi2jqd622s" path="res://Assets/Sprites/Temp Front Counter/fc-chairs-table-temp.png" id="3_ebvgx"]
[ext_resource type="Script" path="res://Assets/Scripts/Front Counter/pantryDisplay.gd" id="3_xt8ek"]
[ext_resource type="Texture2D" uid="uid://bf4rfex4llbj7" path="res://Assets/Sprites/Temp Front Counter/fc-door-temp.png" id="4_utxrw"]
[ext_resource type="Texture2D" uid="uid://bxqm60qh4nyql" path="res://Assets/Sprites/Temp Front Counter/fc-counter-temp.png" id="5_crwio"]

[sub_resource type="Gradient" id="Gradient_u7lib"]
offsets = PackedFloat32Array(0, 0.125628, 0.773869, 0.869347, 0.904523, 0.919598)
colors = PackedColorArray(0, 0, 0, 1, 0.86, 0.86, 0.86, 1, 0.9, 0.9, 0.9, 1, 0.1, 0.1, 0.1, 1, 0.29, 0.29, 0.29, 1, 0.87, 0.87, 0.87, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ewrjd"]
gradient = SubResource("Gradient_u7lib")
width = 400
height = 250
fill_from = Vector2(0.484733, 0.873282)
fill_to = Vector2(0.484733, 0.329771)

[sub_resource type="Gradient" id="Gradient_rg30t"]
colors = PackedColorArray(0, 0, 0, 1, 0.56351, 0.74, 0.5402, 0.47451)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g82wl"]
gradient = SubResource("Gradient_rg30t")
width = 200
height = 250
fill_from = Vector2(0.00763359, 0.970992)
fill_to = Vector2(0.263359, 0.0122137)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4rft"]
size = Vector2(200, 250)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v2kob"]
size = Vector2(200, 250)

[sub_resource type="Gradient" id="Gradient_l4x1c"]
offsets = PackedFloat32Array(0, 0.994975)
colors = PackedColorArray(0.3705, 0.546725, 0.57, 1, 1, 0.82, 0.55, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8dxd7"]
gradient = SubResource("Gradient_l4x1c")
width = 229
height = 164

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cuwtm"]
size = Vector2(229, 164)

[node name="frontCounter" type="Node2D"]
process_mode = 1
script = ExtResource("1_nasjd")

[node name="BG" type="Sprite2D" parent="."]
self_modulate = Color(0.85098, 0.576471, 0.658824, 1)
texture = ExtResource("2_iohlj")
centered = false
metadata/_edit_lock_ = true

[node name="table" type="Sprite2D" parent="BG"]
position = Vector2(1246, 621)
texture = ExtResource("3_ebvgx")

[node name="door" type="Sprite2D" parent="BG"]
position = Vector2(452, 478)
texture = ExtResource("4_utxrw")

[node name="counter" type="Sprite2D" parent="BG"]
texture = ExtResource("5_crwio")
centered = false
offset = Vector2(0, 728)

[node name="pastryDisplay" type="Node2D" parent="."]
position = Vector2(1638, 902)
script = ExtResource("3_xt8ek")

[node name="shelves" type="Sprite2D" parent="pastryDisplay"]
position = Vector2(-481, -244)
scale = Vector2(1.8825, 1.612)
texture = SubResource("GradientTexture2D_ewrjd")
centered = false

[node name="leftDoor" type="Sprite2D" parent="pastryDisplay/shelves"]
texture = SubResource("GradientTexture2D_g82wl")
centered = false

[node name="leftArea" type="Area2D" parent="pastryDisplay/shelves/leftDoor"]

[node name="collisionShape2d" type="CollisionShape2D" parent="pastryDisplay/shelves/leftDoor/leftArea"]
position = Vector2(100, 125)
shape = SubResource("RectangleShape2D_v4rft")
debug_color = Color(0, 0.595, 0.7, 0.00392157)

[node name="rightDoor" type="Sprite2D" parent="pastryDisplay/shelves"]
position = Vector2(400, 0)
texture = SubResource("GradientTexture2D_g82wl")
centered = false
offset = Vector2(-200, 0)
flip_h = true

[node name="rightArea" type="Area2D" parent="pastryDisplay/shelves/rightDoor"]
position = Vector2(-200, 0)

[node name="collisionShape2d" type="CollisionShape2D" parent="pastryDisplay/shelves/rightDoor/rightArea"]
position = Vector2(100, 125)
shape = SubResource("RectangleShape2D_v2kob")
debug_color = Color(0, 0.596078, 0.701961, 0.00392157)

[node name="achievements" type="Node2D" parent="."]
position = Vector2(1697, 176)

[node name="sprite2d" type="Sprite2D" parent="achievements"]
texture = SubResource("GradientTexture2D_8dxd7")

[node name="area2d" type="Area2D" parent="achievements"]

[node name="collisionShape2d" type="CollisionShape2D" parent="achievements/area2d"]
shape = SubResource("RectangleShape2D_cuwtm")
debug_color = Color(0, 0.596078, 0.701961, 0)

[connection signal="input_event" from="pastryDisplay/shelves/leftDoor/leftArea" to="pastryDisplay" method="_on_left_area_input_event"]
[connection signal="mouse_entered" from="pastryDisplay/shelves/leftDoor/leftArea" to="pastryDisplay" method="_on_left_area_mouse_entered"]
[connection signal="mouse_exited" from="pastryDisplay/shelves/leftDoor/leftArea" to="pastryDisplay" method="_on_left_area_mouse_exited"]
[connection signal="input_event" from="pastryDisplay/shelves/rightDoor/rightArea" to="pastryDisplay" method="_on_right_area_input_event"]
[connection signal="mouse_entered" from="pastryDisplay/shelves/rightDoor/rightArea" to="pastryDisplay" method="_on_right_area_mouse_entered"]
[connection signal="mouse_exited" from="pastryDisplay/shelves/rightDoor/rightArea" to="pastryDisplay" method="_on_right_area_mouse_exited"]
[connection signal="input_event" from="achievements/area2d" to="." method="_on_area_2d_input_event"]
